--- a/DPR_workflow1.ipynb
+++ b/DPR_workflow1.ipynb
@@ -873,7 +873,7 @@
     }
    ],
    "source": [
-    "#Carbamate barplot\n",
+    "#Organochlorine barplot\n",
     "import math\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as P\n",
